--- a/index.html
+++ b/index.html
@@ -31,8 +31,11 @@
 
            
         </div>
-        
+        <div class="footer">
+            &#169; Made by Aaranya Maskey
+        </div>
     </div>
+   
     <script src="weather.js"></script>
 </body>
 </html>
